2009-01-04  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/oci8.c: delete OCI8.oracle_client_version implemented
	    in C. add OCI8.oracle_client_vernum whose value is retrieved
	    by OCIClientVersion() if Oracle 10.2 or upper.
	* ext/oci8/oci8.h: add macro rb_define_singleton_method_nodoc,
	    which prevents rdoc from gathering the specified method.
	* lib/.document, lib/oci8/.document: add lib/oci8.rb and
	    lib/oci8/oracle_version.rb to rdoc targets.
	* lib/oci8.rb.in, lib/oci8/oracle_version.rb: add
	    OCI8::OracleVersion OCI8.oracle_client_version.
	* test/config.rb: change version checking code to use
	    OCI8::OracleVersion.
	* test/test_all.rb, test/test_oracle_version.rb: add test cases
	    of OCI8::OracleVersion.

2009-01-03  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/encoding.c, ext/oci8/error.c, ext/oci8/ocinumber.c,
	  ext/oci8/oradate.c: use rb_usascii_str_new() or
	    rb_usascii_str_new_cstr() when its encoding is always
	    us-ascii.
	* ext/oci8/extconf.rb: add type checking for rb_encoding
	    for ruby 1.9.
	* ext/oci8/oci8.h: use rb_str_new(), rb_str_new2() and
	    rb_tainted_str_new() if rb_usascii_str_new(),
	    rb_usascii_str_new_cstr() and rb_external_str_new_with_enc()
	    are not usable.
	* ext/oci8/oci8lib.c: use ORAVERNUM macro.

2009-01-03  KUBO Takehiro  <kubo@jiubao.org>
	* custom-rdoc.rb: fix for rdoc bundled with ruby 1.9.
	* ext/oci8/apiwrap.yml, ext/oci8/oci8lib.c: set the value of
	    OCI8.oracle_client_version by OCIClientVersion() if
	    the binary is configured with --with-runtime-check and
	    the Oracle client is 10.2 or upper.
	* test/test_oranumber.rb: disable workaround code when
	    the Oracle client is 10.2.0.4 or upper.

2008-12-30  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/attr.c: rewrite code converting the rowid descriptor
	    to string representation by using oci8_exec_sql().
	* ext/oci8/oci8.c, ext/oci8/oci8.h, ext/oci8/oci8lib.c,